05-traefik/services.yaml
apiVersion: v1
kind: Service

metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik

spec:
  selector:
    app: traefik

  type: LoadBalancer
  ports:
    - port: 80
      name: web
      targetPort: web
    - port: 443
      name: websecure
      targetPort: websecure
    - port: 8080
      name: traefik
      targetPort: traefik

---
